DLP.UO232346.EXAMEN/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : l_dec_globales

   2  l_dec_globales :
   3                 | l_dec_globales dec_global

   4  l_dec_locales :
   5                | l_dec_locales dec_local

   6  dec_global : VAR IDENT ':' tipo ';'
   7             | STRUCT IDENT '{' l_dec_struct '}' ';'
   8             | IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}'

   9  l_dec_struct : IDENT ':' tipo ';'
  10               | l_dec_struct IDENT ':' tipo ';'

  11  dec_local : VAR IDENT ':' tipo ';'

  12  signatura :
  13            | l_parametros

  14  l_parametros : parametro
  15               | l_parametros ',' parametro

  16  parametro : IDENT ':' tipo

  17  l_sentencias :
  18               | l_sentencias sentencia

  19  sentencia : l_expresion '=' l_expresion ';'
  20            | IDENT '(' argumentos ')' ';'
  21            | PRINT expresion ';'
  22            | PRINTSP expresion ';'
  23            | PRINTLN expresion ';'
  24            | PRINTLN ';'
  25            | READ expresion ';'
  26            | WHILE '(' expresion ')' '{' l_sentencias '}'
  27            | IF '(' expresion ')' '{' l_sentencias '}'
  28            | IF '(' expresion ')' '{' l_sentencias '}' ELSE '{' l_sentencias '}'
  29            | RETURN expresion ';'
  30            | RETURN ';'

  31  l_expresion : l_expresion ',' expresion
  32              | expresion

  33  expresion : expresion '+' expresion
  34            | expresion '*' expresion
  35            | expresion '-' expresion
  36            | expresion '/' expresion
  37            | expresion AND expresion
  38            | expresion OR expresion
  39            | expresion '^' expresion
  40            | NOT expresion
  41            | expresion '<' expresion
  42            | expresion '>' expresion
  43            | expresion IGUAL expresion
  44            | expresion MAYORIGUAL expresion
  45            | expresion MENORIGUAL expresion
  46            | expresion DISTINTO expresion
  47            | expresion '.' IDENT
  48            | expresion '[' expresion ']'
  49            | '(' expresion ')'
  50            | IDENT '(' argumentos ')'
  51            | CAST '<' tipo '>' '(' expresion ')'
  52            | IDENT
  53            | LIT_INT
  54            | LIT_FLOAT
  55            | LIT_CHAR

  56  argumentos :
  57             | l_argumentos

  58  l_argumentos : expresion
  59               | l_argumentos ',' expresion

  60  tipo_retorno :
  61               | ':' tipo

  62  tipo : IDENT
  63       | '[' LIT_INT ']' tipo
  64       | INT
  65       | FLOAT
  66       | CHAR

state 0
	$accept : . programa $end  (0)
	l_dec_globales : .  (2)

	.  reduce 2

	programa  goto 1
	l_dec_globales  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : l_dec_globales .  (1)
	l_dec_globales : l_dec_globales . dec_global  (3)

	VAR  shift 3
	STRUCT  shift 4
	IDENT  shift 5
	$end  reduce 1

	dec_global  goto 6


state 3
	dec_global : VAR . IDENT ':' tipo ';'  (6)

	IDENT  shift 7
	.  error


state 4
	dec_global : STRUCT . IDENT '{' l_dec_struct '}' ';'  (7)

	IDENT  shift 8
	.  error


state 5
	dec_global : IDENT . '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)

	'('  shift 9
	.  error


state 6
	l_dec_globales : l_dec_globales dec_global .  (3)

	.  reduce 3


state 7
	dec_global : VAR IDENT . ':' tipo ';'  (6)

	':'  shift 10
	.  error


state 8
	dec_global : STRUCT IDENT . '{' l_dec_struct '}' ';'  (7)

	'{'  shift 11
	.  error


state 9
	dec_global : IDENT '(' . signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)
	signatura : .  (12)

	IDENT  shift 12
	')'  reduce 12

	signatura  goto 13
	l_parametros  goto 14
	parametro  goto 15


state 10
	dec_global : VAR IDENT ':' . tipo ';'  (6)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21


state 11
	dec_global : STRUCT IDENT '{' . l_dec_struct '}' ';'  (7)

	IDENT  shift 22
	.  error

	l_dec_struct  goto 23


state 12
	parametro : IDENT . ':' tipo  (16)

	':'  shift 24
	.  error


state 13
	dec_global : IDENT '(' signatura . ')' tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)

	')'  shift 25
	.  error


state 14
	signatura : l_parametros .  (13)
	l_parametros : l_parametros . ',' parametro  (15)

	','  shift 26
	')'  reduce 13


state 15
	l_parametros : parametro .  (14)

	.  reduce 14


state 16
	tipo : INT .  (64)

	.  reduce 64


state 17
	tipo : FLOAT .  (65)

	.  reduce 65


state 18
	tipo : CHAR .  (66)

	.  reduce 66


state 19
	tipo : IDENT .  (62)

	.  reduce 62


state 20
	tipo : '[' . LIT_INT ']' tipo  (63)

	LIT_INT  shift 27
	.  error


state 21
	dec_global : VAR IDENT ':' tipo . ';'  (6)

	';'  shift 28
	.  error


state 22
	l_dec_struct : IDENT . ':' tipo ';'  (9)

	':'  shift 29
	.  error


state 23
	dec_global : STRUCT IDENT '{' l_dec_struct . '}' ';'  (7)
	l_dec_struct : l_dec_struct . IDENT ':' tipo ';'  (10)

	IDENT  shift 30
	'}'  shift 31
	.  error


state 24
	parametro : IDENT ':' . tipo  (16)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 32


state 25
	dec_global : IDENT '(' signatura ')' . tipo_retorno '{' l_dec_locales l_sentencias '}'  (8)
	tipo_retorno : .  (60)

	':'  shift 33
	'{'  reduce 60

	tipo_retorno  goto 34


state 26
	l_parametros : l_parametros ',' . parametro  (15)

	IDENT  shift 12
	.  error

	parametro  goto 35


state 27
	tipo : '[' LIT_INT . ']' tipo  (63)

	']'  shift 36
	.  error


state 28
	dec_global : VAR IDENT ':' tipo ';' .  (6)

	.  reduce 6


state 29
	l_dec_struct : IDENT ':' . tipo ';'  (9)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 37


state 30
	l_dec_struct : l_dec_struct IDENT . ':' tipo ';'  (10)

	':'  shift 38
	.  error


state 31
	dec_global : STRUCT IDENT '{' l_dec_struct '}' . ';'  (7)

	';'  shift 39
	.  error


state 32
	parametro : IDENT ':' tipo .  (16)

	.  reduce 16


state 33
	tipo_retorno : ':' . tipo  (61)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 40


state 34
	dec_global : IDENT '(' signatura ')' tipo_retorno . '{' l_dec_locales l_sentencias '}'  (8)

	'{'  shift 41
	.  error


state 35
	l_parametros : l_parametros ',' parametro .  (15)

	.  reduce 15


state 36
	tipo : '[' LIT_INT ']' . tipo  (63)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 42


state 37
	l_dec_struct : IDENT ':' tipo . ';'  (9)

	';'  shift 43
	.  error


state 38
	l_dec_struct : l_dec_struct IDENT ':' . tipo ';'  (10)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 44


state 39
	dec_global : STRUCT IDENT '{' l_dec_struct '}' ';' .  (7)

	.  reduce 7


state 40
	tipo_retorno : ':' tipo .  (61)

	.  reduce 61


state 41
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' . l_dec_locales l_sentencias '}'  (8)
	l_dec_locales : .  (4)

	.  reduce 4

	l_dec_locales  goto 45


state 42
	tipo : '[' LIT_INT ']' tipo .  (63)

	.  reduce 63


state 43
	l_dec_struct : IDENT ':' tipo ';' .  (9)

	.  reduce 9


state 44
	l_dec_struct : l_dec_struct IDENT ':' tipo . ';'  (10)

	';'  shift 46
	.  error


state 45
	l_dec_locales : l_dec_locales . dec_local  (5)
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales . l_sentencias '}'  (8)
	l_sentencias : .  (17)

	VAR  shift 47
	PRINT  reduce 17
	PRINTSP  reduce 17
	PRINTLN  reduce 17
	READ  reduce 17
	CAST  reduce 17
	IF  reduce 17
	WHILE  reduce 17
	RETURN  reduce 17
	LIT_INT  reduce 17
	LIT_FLOAT  reduce 17
	LIT_CHAR  reduce 17
	IDENT  reduce 17
	NOT  reduce 17
	'('  reduce 17
	'}'  reduce 17

	dec_local  goto 48
	l_sentencias  goto 49


state 46
	l_dec_struct : l_dec_struct IDENT ':' tipo ';' .  (10)

	.  reduce 10


state 47
	dec_local : VAR . IDENT ':' tipo ';'  (11)

	IDENT  shift 50
	.  error


state 48
	l_dec_locales : l_dec_locales dec_local .  (5)

	.  reduce 5


state 49
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias . '}'  (8)
	l_sentencias : l_sentencias . sentencia  (18)

	PRINT  shift 51
	PRINTSP  shift 52
	PRINTLN  shift 53
	READ  shift 54
	CAST  shift 55
	IF  shift 56
	WHILE  shift 57
	RETURN  shift 58
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 62
	NOT  shift 63
	'('  shift 64
	'}'  shift 65
	.  error

	sentencia  goto 66
	l_expresion  goto 67
	expresion  goto 68


state 50
	dec_local : VAR IDENT . ':' tipo ';'  (11)

	':'  shift 69
	.  error


state 51
	sentencia : PRINT . expresion ';'  (21)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 71


state 52
	sentencia : PRINTSP . expresion ';'  (22)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 72


state 53
	sentencia : PRINTLN . expresion ';'  (23)
	sentencia : PRINTLN . ';'  (24)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	';'  shift 73
	.  error

	expresion  goto 74


state 54
	sentencia : READ . expresion ';'  (25)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 75


state 55
	expresion : CAST . '<' tipo '>' '(' expresion ')'  (51)

	'<'  shift 76
	.  error


state 56
	sentencia : IF . '(' expresion ')' '{' l_sentencias '}'  (27)
	sentencia : IF . '(' expresion ')' '{' l_sentencias '}' ELSE '{' l_sentencias '}'  (28)

	'('  shift 77
	.  error


state 57
	sentencia : WHILE . '(' expresion ')' '{' l_sentencias '}'  (26)

	'('  shift 78
	.  error


state 58
	sentencia : RETURN . expresion ';'  (29)
	sentencia : RETURN . ';'  (30)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	';'  shift 79
	.  error

	expresion  goto 80


state 59
	expresion : LIT_INT .  (53)

	.  reduce 53


state 60
	expresion : LIT_FLOAT .  (54)

	.  reduce 54


state 61
	expresion : LIT_CHAR .  (55)

	.  reduce 55


state 62
	sentencia : IDENT . '(' argumentos ')' ';'  (20)
	expresion : IDENT . '(' argumentos ')'  (50)
	expresion : IDENT .  (52)

	'('  shift 81
	IGUAL  reduce 52
	MAYORIGUAL  reduce 52
	MENORIGUAL  reduce 52
	DISTINTO  reduce 52
	AND  reduce 52
	OR  reduce 52
	'='  reduce 52
	'^'  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'['  reduce 52
	'.'  reduce 52
	','  reduce 52


state 63
	expresion : NOT . expresion  (40)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 82


state 64
	expresion : '(' . expresion ')'  (49)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 83


state 65
	dec_global : IDENT '(' signatura ')' tipo_retorno '{' l_dec_locales l_sentencias '}' .  (8)

	.  reduce 8


state 66
	l_sentencias : l_sentencias sentencia .  (18)

	.  reduce 18


state 67
	sentencia : l_expresion . '=' l_expresion ';'  (19)
	l_expresion : l_expresion . ',' expresion  (31)

	'='  shift 84
	','  shift 85
	.  error


state 68
	l_expresion : expresion .  (32)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	'='  reduce 32
	';'  reduce 32
	','  reduce 32


state 69
	dec_local : VAR IDENT ':' . tipo ';'  (11)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 101


state 70
	expresion : IDENT . '(' argumentos ')'  (50)
	expresion : IDENT .  (52)

	'('  shift 102
	IGUAL  reduce 52
	MAYORIGUAL  reduce 52
	MENORIGUAL  reduce 52
	DISTINTO  reduce 52
	AND  reduce 52
	OR  reduce 52
	'='  reduce 52
	'^'  reduce 52
	'>'  reduce 52
	'<'  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'*'  reduce 52
	'/'  reduce 52
	'['  reduce 52
	']'  reduce 52
	'.'  reduce 52
	')'  reduce 52
	';'  reduce 52
	','  reduce 52


state 71
	sentencia : PRINT expresion . ';'  (21)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 103
	.  error


state 72
	sentencia : PRINTSP expresion . ';'  (22)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 104
	.  error


state 73
	sentencia : PRINTLN ';' .  (24)

	.  reduce 24


state 74
	sentencia : PRINTLN expresion . ';'  (23)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 105
	.  error


state 75
	sentencia : READ expresion . ';'  (25)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 106
	.  error


state 76
	expresion : CAST '<' . tipo '>' '(' expresion ')'  (51)

	INT  shift 16
	FLOAT  shift 17
	CHAR  shift 18
	IDENT  shift 19
	'['  shift 20
	.  error

	tipo  goto 107


state 77
	sentencia : IF '(' . expresion ')' '{' l_sentencias '}'  (27)
	sentencia : IF '(' . expresion ')' '{' l_sentencias '}' ELSE '{' l_sentencias '}'  (28)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 108


state 78
	sentencia : WHILE '(' . expresion ')' '{' l_sentencias '}'  (26)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 109


state 79
	sentencia : RETURN ';' .  (30)

	.  reduce 30


state 80
	sentencia : RETURN expresion . ';'  (29)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	';'  shift 110
	.  error


state 81
	sentencia : IDENT '(' . argumentos ')' ';'  (20)
	expresion : IDENT '(' . argumentos ')'  (50)
	argumentos : .  (56)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	')'  reduce 56

	argumentos  goto 111
	expresion  goto 112
	l_argumentos  goto 113


state 82
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : NOT expresion .  (40)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	AND  reduce 40
	OR  reduce 40
	'='  reduce 40
	'^'  reduce 40
	']'  reduce 40
	')'  reduce 40
	';'  reduce 40
	','  reduce 40


state 83
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)
	expresion : '(' expresion . ')'  (49)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	')'  shift 114
	.  error


state 84
	sentencia : l_expresion '=' . l_expresion ';'  (19)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	l_expresion  goto 115
	expresion  goto 68


state 85
	l_expresion : l_expresion ',' . expresion  (31)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 116


state 86
	expresion : expresion IGUAL . expresion  (43)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 117


state 87
	expresion : expresion MAYORIGUAL . expresion  (44)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 118


state 88
	expresion : expresion MENORIGUAL . expresion  (45)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 119


state 89
	expresion : expresion DISTINTO . expresion  (46)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 120


state 90
	expresion : expresion AND . expresion  (37)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 121


state 91
	expresion : expresion OR . expresion  (38)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 122


state 92
	expresion : expresion '^' . expresion  (39)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 123


state 93
	expresion : expresion '>' . expresion  (42)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 124


state 94
	expresion : expresion '<' . expresion  (41)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 125


state 95
	expresion : expresion '+' . expresion  (33)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 126


state 96
	expresion : expresion '-' . expresion  (35)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 127


state 97
	expresion : expresion '*' . expresion  (34)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 128


state 98
	expresion : expresion '/' . expresion  (36)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 129


state 99
	expresion : expresion '[' . expresion ']'  (48)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	.  error

	expresion  goto 130


state 100
	expresion : expresion '.' . IDENT  (47)

	IDENT  shift 131
	.  error


state 101
	dec_local : VAR IDENT ':' tipo . ';'  (11)

	';'  shift 132
	.  error


state 102
	expresion : IDENT '(' . argumentos ')'  (50)
	argumentos : .  (56)

	CAST  shift 55
	LIT_INT  shift 59
	LIT_FLOAT  shift 60
	LIT_CHAR  shift 61
	IDENT  shift 70
	NOT  shift 63
	'('  shift 64
	')'  reduce 56

	argumentos  goto 133
	expresion  goto 112
	l_argumentos  goto 113


state 103
	sentencia : PRINT expresion ';' .  (21)

	.  reduce 21


state 104
	sentencia : PRINTSP expresion ';' .  (22)

	.  reduce 22


state 105
	sentencia : PRINTLN expresion ';' .  (23)

	.  reduce 23


state 106
	sentencia : READ expresion ';' .  (25)

	.  reduce 25


state 107
	expresion : CAST '<' tipo . '>' '(' expresion ')'  (51)

	'>'  shift 134
	.  error


state 108
	sentencia : IF '(' expresion . ')' '{' l_sentencias '}'  (27)
	sentencia : IF '(' expresion . ')' '{' l_sentencias '}' ELSE '{' l_sentencias '}'  (28)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
	expresion : expresion . IGUAL expresion  (43)
	expresion : expresion . MAYORIGUAL expresion  (44)
	expresion : expresion . MENORIGUAL expresion  (45)
	expresion : expresion . DISTINTO expresion  (46)
	expresion : expresion . '.' IDENT  (47)
	expresion : expresion . '[' expresion ']'  (48)

	IGUAL  shift 86
	MAYORIGUAL  shift 87
	MENORIGUAL  shift 88
	DISTINTO  shift 89
	AND  shift 90
	OR  shift 91
	'^'  shift 92
	'>'  shift 93
	'<'  shift 94
	'+'  shift 95
	'-'  shift 96
	'*'  shift 97
	'/'  shift 98
	'['  shift 99
	'.'  shift 100
	')'  shift 135
	.  error


state 109
	sentencia : WHILE '(' expresion . ')' '{' l_sentencias '}'  (26)
	expresion : expresion . '+' expresion  (33)
	expresion : expresion . '*' expresion  (34)
	expresion : expresion . '-' expresion  (35)
	expresion : expresion . '/' expresion  (36)
	expresion : expresion . AND expresion  (37)
	expresion : expresion . OR expresion  (38)
	expresion : expresion . '^' expresion  (39)
	expresion : expresion . '<' expresion  (41)
	expresion : expresion . '>' expresion  (42)
